Made note widget text editable through doc window. This also fixes doc window related inconsistences after selecting note widgets.

BUG:301181

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1298924